--- a/Practical/Project/User/Css/index.css
+++ b/Practical/Project/User/Css/index.css
@@ -2,11 +2,9 @@
   padding: 0;
   margin: 0;
 }
-
 html {
   font-size: 62.5%;
 }
-
 body {
   padding: 0;
   margin: 0;
@@ -16,7 +14,6 @@ body {
   font-family: Roboto, sans-serif;
   overflow-x: hidden;
 }
-
 
 main {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../image/pizza.jpg);
@@ -76,7 +73,6 @@ main .search_bar .heading h1 {
 .left-section {
  flex: 1;
   animation: login 1s;
-
 }
 
 @keyframes login {
@@ -173,8 +169,8 @@ main .thought {
   width: 100%;
   height: 100%;
   box-shadow: 0px .1rem .5rem .1rem #263238;
-  background-color: #263238;
-  transition: .5s;
+  background-color: #cacdcf;
+  transition: .3s;
   z-index: 1;
 }
 
@@ -193,7 +189,7 @@ main .thought {
   transform: translate(-50%, -50%);
   font-size: 12rem;
   transition: .5s;
-  color: #f5f6f5;
+  color: #263238;
 }
 
 .advertisement .box:hover .icon .material-icons {
